tests/specs/check/ts_suppression_unresolved_import/ts_expect_error_unused.out
TS2578 [ERROR]: Unused '@ts-expect-error' directive.
// @ts-expect-error
^
    at file:///[WILDLINE]/ts_expect_error_unused.ts:1:1

error: Type checking failed.
