tests/specs/check/ts_suppression_unresolved_import/ts_expect_error_unused.ts
// @ts-expect-error
const value = 1;

console.log(value);
